2002-05-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht: Update *-ezmlm and *-mailman to show just the
	parent directory as the argument.

2002-05-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* install.ht (Links): Clarify that TMDA is meant to be run
	directly from its source tree.

	(tarball): --nodeps has to come after, not before the other
	options on Mandrake.

2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht: Link to Andrew Wilson's Mail::Address::Tagged perl
	module.

	* install.ht: Add RPM instructions for systems without a
	/usr/bin/python2.
	
2002-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Update Mutt/VVV-NNTP link.
	Warn that for mutt, sendmail_wait should not be set to -1.
	
2002-04-24  Jason R. Mastaler  <jasonrm@aguirre.la.mastaler.com>

	* results.ht (Links): Add testimonial from Moe Webber.

2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-pre.ht (suffix): Exim comments should be on their own
	line.
	
2002-04-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Link to Mintersoft's VisualMail and NightSky
	Entertainment.
	
2002-04-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (TARGET): Link to Gmane.

2002-04-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (TARGET): Add commercial support link for Mike
	Meyer.  Remove link to tmda_confirm.pl.
	
2002-04-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Mention collectaddys in the whitelist FAQ.

2002-03-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: New entries:
	- "Can I post to a TMDA protected mailing list with a 'dated'
	address?"
	- "How do I prevent my auto-whitelist from being filled with
	'dated' addresses?"
	
2002-03-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
